syntax = "proto3";

package agent.v1;

option go_package = "xiaozhizhang/system/agent/api/proto";

// AgentService Agent 守护进程服务
// 负责本机的 nginx/systemd/ssl 文件落盘、读取与命令执行
service AgentService {
  // ==================== Nginx 配置管理 ====================
  
  // PutNginxConfig 创建或更新 nginx 配置文件（原子写入 + 校验 + reload）
  rpc PutNginxConfig(PutNginxConfigRequest) returns (PutNginxConfigResponse);
  
  // GetNginxConfig 读取 nginx 配置文件
  rpc GetNginxConfig(GetNginxConfigRequest) returns (GetNginxConfigResponse);
  
  // DeleteNginxConfig 删除 nginx 配置文件（备份 + 删除 + 校验 + reload）
  rpc DeleteNginxConfig(DeleteNginxConfigRequest) returns (DeleteNginxConfigResponse);
  
  // ListNginxConfigs 列出所有 nginx 配置文件
  rpc ListNginxConfigs(ListNginxConfigsRequest) returns (ListNginxConfigsResponse);
  
  // ValidateNginxConfig 仅校验 nginx 配置（nginx -t）
  rpc ValidateNginxConfig(ValidateNginxConfigRequest) returns (ValidateNginxConfigResponse);
  
  // ReloadNginx 重载 nginx（nginx -s reload）
  rpc ReloadNginx(ReloadNginxRequest) returns (ReloadNginxResponse);
  
  // ==================== Systemd 单元管理 ====================
  
  // PutSystemdUnit 创建或更新 systemd unit 文件（原子写入 + daemon-reload）
  rpc PutSystemdUnit(PutSystemdUnitRequest) returns (PutSystemdUnitResponse);
  
  // GetSystemdUnit 读取 systemd unit 文件
  rpc GetSystemdUnit(GetSystemdUnitRequest) returns (GetSystemdUnitResponse);
  
  // DeleteSystemdUnit 删除 systemd unit 文件（可选停止/禁用 + 删除 + daemon-reload）
  rpc DeleteSystemdUnit(DeleteSystemdUnitRequest) returns (DeleteSystemdUnitResponse);
  
  // ListSystemdUnits 列出所有 systemd unit 文件
  rpc ListSystemdUnits(ListSystemdUnitsRequest) returns (ListSystemdUnitsResponse);
  
  // SystemdDaemonReload 执行 systemctl daemon-reload
  rpc SystemdDaemonReload(SystemdDaemonReloadRequest) returns (SystemdDaemonReloadResponse);
  
  // SystemdServiceControl 控制服务（start/stop/restart/reload/enable/disable）
  rpc SystemdServiceControl(SystemdServiceControlRequest) returns (SystemdServiceControlResponse);
  
  // GetSystemdServiceStatus 获取服务状态
  rpc GetSystemdServiceStatus(GetSystemdServiceStatusRequest) returns (GetSystemdServiceStatusResponse);
  
  // GetSystemdServiceLogs 获取服务日志
  rpc GetSystemdServiceLogs(GetSystemdServiceLogsRequest) returns (GetSystemdServiceLogsResponse);
  
  // ==================== SSL 证书部署 ====================
  
  // DeploySSLCertificate 部署 SSL 证书到本机指定路径
  rpc DeploySSLCertificate(DeploySSLCertificateRequest) returns (DeploySSLCertificateResponse);
  
  // ReloadService 受控服务重载（nginx/systemd）
  rpc ReloadService(ReloadServiceRequest) returns (ReloadServiceResponse);
  
  // ==================== 健康检查 ====================
  
  // HealthCheck 健康检查
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ==================== Nginx 消息定义 ====================

message PutNginxConfigRequest {
  string name = 1;           // 配置文件名（如 example.conf）
  string content = 2;        // 配置内容
  bool validate = 3;         // 是否校验（默认 true）
  bool reload = 4;           // 是否重载（默认 true）
}

message PutNginxConfigResponse {
  bool success = 1;
  string message = 2;
  string validate_output = 3; // nginx -t 输出
  string reload_output = 4;   // nginx -s reload 输出
}

message GetNginxConfigRequest {
  string name = 1;
}

message GetNginxConfigResponse {
  string name = 1;
  string content = 2;
  string description = 3;
  int64 mod_time = 4; // Unix timestamp
}

message DeleteNginxConfigRequest {
  string name = 1;
  bool validate = 2; // 是否校验（默认 true）
  bool reload = 3;   // 是否重载（默认 true）
}

message DeleteNginxConfigResponse {
  bool success = 1;
  string message = 2;
}

message ListNginxConfigsRequest {
  string keyword = 1; // 可选的关键字过滤
}

message ListNginxConfigsResponse {
  repeated NginxConfigItem configs = 1;
}

message NginxConfigItem {
  string name = 1;
  string description = 2;
  int64 mod_time = 3;
}

message ValidateNginxConfigRequest {
  // 空请求，校验当前所有配置
}

message ValidateNginxConfigResponse {
  bool success = 1;
  string output = 2;
}

message ReloadNginxRequest {
  // 空请求
}

message ReloadNginxResponse {
  bool success = 1;
  string output = 2;
}

// ==================== Systemd 消息定义 ====================

message PutSystemdUnitRequest {
  string name = 1;         // unit 文件名（如 myapp.service）
  string content = 2;      // unit 文件内容
  bool daemon_reload = 3;  // 是否执行 daemon-reload（默认 true）
}

message PutSystemdUnitResponse {
  bool success = 1;
  string message = 2;
}

message GetSystemdUnitRequest {
  string name = 1;
}

message GetSystemdUnitResponse {
  string name = 1;
  string content = 2;
  string description = 3;
  int64 mod_time = 4;
}

message DeleteSystemdUnitRequest {
  string name = 1;
  bool stop_service = 2;    // 是否先停止服务（默认 false）
  bool disable_service = 3; // 是否先禁用服务（默认 false）
  bool daemon_reload = 4;   // 是否执行 daemon-reload（默认 true）
}

message DeleteSystemdUnitResponse {
  bool success = 1;
  string message = 2;
}

message ListSystemdUnitsRequest {
  string keyword = 1;
}

message ListSystemdUnitsResponse {
  repeated SystemdUnitItem units = 1;
}

message SystemdUnitItem {
  string name = 1;
  string description = 2;
  int64 mod_time = 3;
}

message SystemdDaemonReloadRequest {
  // 空请求
}

message SystemdDaemonReloadResponse {
  bool success = 1;
  string output = 2;
}

message SystemdServiceControlRequest {
  string name = 1;
  string action = 2; // start/stop/restart/reload/enable/disable
}

message SystemdServiceControlResponse {
  bool success = 1;
  string output = 2;
}

message GetSystemdServiceStatusRequest {
  string name = 1;
}

message GetSystemdServiceStatusResponse {
  string name = 1;
  string description = 2;
  string load_state = 3;
  string active_state = 4;
  string sub_state = 5;
  string unit_file_state = 6;
  int32 main_pid = 7;
  string exec_main_start_at = 8;
  uint64 memory_current = 9;
  string result = 10;
}

message GetSystemdServiceLogsRequest {
  string name = 1;
  int32 lines = 2;    // 返回行数（默认 200）
  string since = 3;   // 起始时间（可选，如 "1h ago"）
  string until = 4;   // 结束时间（可选）
}

message GetSystemdServiceLogsResponse {
  string name = 1;
  repeated string log_lines = 2;
}

// ==================== SSL 证书部署消息定义 ====================

message DeploySSLCertificateRequest {
  string base_path = 1;        // 证书存放目录
  string fullchain_name = 2;   // fullchain 文件名（默认 fullchain.pem）
  string privkey_name = 3;     // privkey 文件名（默认 privkey.pem）
  string fullchain_pem = 4;    // fullchain 内容
  string privkey_pem = 5;      // privkey 内容
  string file_mode = 6;        // 文件权限（如 "0600"，默认 0600）
}

message DeploySSLCertificateResponse {
  bool success = 1;
  string message = 2;
  string fullchain_path = 3;
  string privkey_path = 4;
}

message ReloadServiceRequest {
  string service_type = 1; // nginx/systemd
  string service_name = 2; // 对于 systemd，是 unit 名称；对于 nginx 可为空
}

message ReloadServiceResponse {
  bool success = 1;
  string output = 2;
}

// ==================== 健康检查消息定义 ====================

message HealthCheckRequest {
  // 空请求
}

message HealthCheckResponse {
  string status = 1;  // ok/error
  string version = 2;
  int64 timestamp = 3;
}

